--- a/css/demo.css
+++ b/css/demo.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+
 html, body{
     margin: 0;
     padding: 0;
@@ -49,4 +51,8 @@ button:hover, button:focus, button:active{
 
 .CodeMirror{
  border: 1px solid #ddd;
+}
+
+.jh-root {
+    font-family: 'Inconsolata' ;
 }
