--- a/css/json.human.css
+++ b/css/json.human.css
@@ -53,11 +53,11 @@
     vertical-align: top;
 }
 
-.jh-type-object > tr:nth-child(odd), .jh-type-array > tr:nth-child(odd){
+.jh-type-object > tbody > tr:nth-child(odd), .jh-type-array > tbody > tr:nth-child(odd){
     background-color: #f5f5f5;
 }
 
-.jh-type-object > tr:nth-child(even), .jh-type-array > tr:nth-child(even){
+.jh-type-object > tbody > tr:nth-child(even), .jh-type-array > tbody > tr:nth-child(even){
     background-color: #fff;
 }
 
@@ -75,16 +75,16 @@ th.jh-key{
  text-align: left;
 }
 
-.jh-type-object > tr, .jh-type-array > tr{
+.jh-type-object > tbody > tr, .jh-type-array > tbody > tr{
  border: 1px solid #ddd;
  border-bottom: none;
 }
 
-.jh-type-object > tr:last-child, .jh-type-array > tr:last-child{
+.jh-type-object > tbody > tr:last-child, .jh-type-array > tbody > tr:last-child{
  border-bottom: 1px solid #ddd;
 }
 
-.jh-type-object > tr:hover, .jh-type-array > tr:hover{
+.jh-type-object > tbody > tr:hover, .jh-type-array > tbody > tr:hover{
  border: 1px solid #F99927;
 }
 
